Menu pulldown button can't be closed if clicked on lower half #45750

Closed
opened 2015-08-10 21:32:30 +02:00 by Hadrien Brissaud · 5 comments

System Information
Fedora22 GTX660M

Blender Version
Broken: 2.75a
Worked: (optional)

Short description of error
Menu pulldown button can't be closed if clicked on lower half (actually the half that's on the side of the opened menu).
menubuttoncap.png
Additionally, if menu unrolls to the upside, this behaviour (https://developer.blender.org/T41548) can be reproduced.

**System Information** Fedora22 GTX660M **Blender Version** Broken: 2.75a Worked: (optional) **Short description of error** Menu pulldown button can't be closed if clicked on lower half (actually the half that's on the side of the opened menu). ![menubuttoncap.png](https://archive.blender.org/developer/F222947/menubuttoncap.png) Additionally, if menu unrolls to the upside, this behaviour (https://developer.blender.org/T41548) can be reproduced.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hadrien

Added subscriber: @hadrien
Julian Eisel was assigned by Aaron Carlisle 2015-08-11 17:07:12 +02:00
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by d9a720a709

This issue was referenced by d9a720a709c8c4358edb3051c0f2c0daf4482cd2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45750
No description provided.