Fix T45750: Closing search menu by clicking root button doesn't work when clicking on lower half